HEader completed for desktop view

--- a/index.html
+++ b/index.html
@@ -43,6 +43,47 @@
                 </ul>
             </li>
         </ul>
+        <ul class="top_tabs">
+            <li>
+                ABOUT IIMB
+            </li>
+            <li>
+                ADMISSIONS
+            </li>
+            <li>
+                EXECUTIVE EDUCATION
+            </li>
+            <li>
+                FACILITY AND RESEARCH
+            </li>
+            <li>
+                CENTRE OF EXCELLENCE
+            </li>
+        </ul>
     </header>
+    <section class="slider">
+        <div class="text_part">
+            <h2>
+                Earth Day Celebrations at IIMB
+            </h2>
+            <p>
+                On Earth Day at IIMB, environmentalist Suresh Heblikar rues that all districts in the State aspire to
+                Bangalore's "growth" model but hopes young minds, like those at IIMB, can reverse this trend...
+            </p>
+            <a href="">
+                Read More
+            </a>
+            <ul class="arrows">
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+        <div class="img_part">
+
+        </div>
+    </section>
+    <main>
+
+    </main>
 </body>
 </html>
