Sliding part completed

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </ul>
         </div>
         <div class="img_part">
-
+            <!-- <img src="images/DSC_0266.jpeg" alt="" /> -->
         </div>
     </section>
     <main>
