News, Events and Features part completed for desktop view

--- a/index.html
+++ b/index.html
@@ -83,7 +83,86 @@
         </div>
     </section>
     <main>
-
+        <article class="news_events_features">
+            <section class="news">
+                <h3>
+                    News
+                </h3>
+                <img class="present_image" src="images/IMG_3048.jpeg" alt="" />
+                <div class="detailed_news">
+                    <div class="date">
+                        <img src="images/News_icon.png" alt="" />
+                        October 7, 2015
+                    </div>
+                    <ul class="details">
+                        <li>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                        </li>
+                        <li>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                        </li>
+                    </ul>
+                </div>
+                <div class="view_more">
+                    <img src="images/News_Viewall.png" alt="" />
+                    <a href="">
+                        View all News
+                    </a>
+                </div>
+            </section>
+            <section class="news">
+                <h3>
+                    Events
+                </h3>
+                <img class="present_image" src="images/IMG_3048.jpeg" alt="" />
+                <div class="detailed_news">
+                    <div class="date">
+                        <img src="images/News_icon.png" alt="" />
+                        October 7, 2015
+                    </div>
+                    <ul class="details">
+                        <li>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                        </li>
+                        <li>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                        </li>
+                    </ul>
+                </div>
+                <div class="view_more">
+                    <img src="images/Events_Viewall.png" alt="" />
+                    <a href="">
+                        View all Events
+                    </a>
+                </div>
+            </section>
+            <section class="news">
+                <h3>
+                    Features
+                </h3>
+                <img class="present_image" src="images/IMG_3048.jpeg" alt="" />
+                <div class="detailed_news">
+                    <div class="date">
+                        <img src="images/News_icon.png" alt="" />
+                        October 7, 2015
+                    </div>
+                    <ul class="details">
+                        <li>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                        </li>
+                        <li>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                        </li>
+                    </ul>
+                </div>
+                <div class="view_more">
+                    <img src="images/Features_Viewall.png" alt="" />
+                    <a href="">
+                        View all Features
+                    </a>
+                </div>
+            </section>
+        </article>
     </main>
 </body>
 </html>
