Box part completed for desktop view

--- a/index.html
+++ b/index.html
@@ -163,6 +163,110 @@
                 </div>
             </section>
         </article>
+        <article class="alert_videos">
+            <section id="alerts">
+                <div class="head">
+                    <img src="images/alert_ico.png" alt="" /> Alerts
+                </div>
+                <ul class="alert_items">
+                    <li>
+                        <div class="img_part_alert">
+                            <img src="images/Prospective_students.png" alt="" />
+                        </div>
+                        <div class="text_part_alert">
+                            <div class="date">
+                                November 7, 2010
+                            </div>
+                            <div class="descr">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="img_part_alert">
+                            <img src="images/Prospective_students.png" alt="" />
+                        </div>
+                        <div class="text_part_alert">
+                            <div class="date">
+                                November 7, 2010
+                            </div>
+                            <div class="descr">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </section>
+            <section id="testimonials">
+                <div class="head">
+                    <img src="images/testimonials_ico.png" alt="" /> Testimonial Videos
+                </div>
+                <ul class="alert_items">
+                    <li>
+                        <div class="img_part_alert">
+                            <img src="images/Prospective_students.png" alt="" />
+                        </div>
+                        <div class="text_part_alert">
+                            <div class="date">
+                                November 7, 2010
+                            </div>
+                            <div class="descr">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="img_part_alert">
+                            <img src="images/Prospective_students.png" alt="" />
+                        </div>
+                        <div class="text_part_alert">
+                            <div class="date">
+                                November 7, 2010
+                            </div>
+                            <div class="descr">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </section>
+            <section id="workshops">
+                <div class="head">
+                    <img src="images/learnworkshop_ico.png" alt="" /> Learning & Workshop
+                </div>
+                <ul class="alert_items">
+                    <li>
+                        <div class="img_part_alert">
+                            <img src="images/Prospective_students.png" alt="" />
+                        </div>
+                        <div class="text_part_alert">
+                            <div class="date">
+                                November 7, 2010
+                            </div>
+                            <div class="descr">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="img_part_alert">
+                            <img src="images/Prospective_students.png" alt="" />
+                        </div>
+                        <div class="text_part_alert">
+                            <div class="date">
+                                November 7, 2010
+                            </div>
+                            <div class="descr">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </section>
+        </article>
+        <article class="">
+
+        </article>
     </main>
 </body>
 </html>
