--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="images/icon.png" type="image/x-icon" />
     <link rel="stylesheet" href="css/styles.css" media="screen" title="no title" charset="utf-8">
     <title>IIMB</title>
 </head>
+
 <body>
     <header>
         <img src="images/logo.png" alt="" />
@@ -67,8 +69,7 @@
                 Earth Day Celebrations at IIMB
             </h2>
             <p>
-                On Earth Day at IIMB, environmentalist Suresh Heblikar rues that all districts in the State aspire to
-                Bangalore's "growth" model but hopes young minds, like those at IIMB, can reverse this trend...
+                On Earth Day at IIMB, environmentalist Suresh Heblikar rues that all districts in the State aspire to Bangalore's "growth" model but hopes young minds, like those at IIMB, can reverse this trend...
             </p>
             <a href="">
                 Read More
@@ -91,8 +92,7 @@
                 <img class="present_image" src="images/IMG_3048.jpeg" alt="" />
                 <div class="detailed_news">
                     <div class="date">
-                        <img src="images/News_icon.png" alt="" />
-                        October 7, 2015
+                        <img src="images/News_icon.png" alt="" /> October 7, 2015
                     </div>
                     <ul class="details">
                         <li>
@@ -117,8 +117,7 @@
                 <img class="present_image" src="images/IMG_3048.jpeg" alt="" />
                 <div class="detailed_news">
                     <div class="date">
-                        <img src="images/News_icon.png" alt="" />
-                        October 7, 2015
+                        <img src="images/News_icon.png" alt="" /> October 7, 2015
                     </div>
                     <ul class="details">
                         <li>
@@ -143,8 +142,7 @@
                 <img class="present_image" src="images/IMG_3048.jpeg" alt="" />
                 <div class="detailed_news">
                     <div class="date">
-                        <img src="images/News_icon.png" alt="" />
-                        October 7, 2015
+                        <img src="images/News_icon.png" alt="" /> October 7, 2015
                     </div>
                     <ul class="details">
                         <li>
@@ -264,9 +262,86 @@
                 </ul>
             </section>
         </article>
-        <article class="">
-
+        <article class="student_publcs_rooms">
+            <ul>
+                <li id="prospective_students">
+                    <img src="images/Prospective_students.png" alt="" />
+                    <div class="bg_public bg1">
+                        <h3>Prospective Students</h3>
+                    </div>
+                </li>
+                <li id="publications">
+                    Publications
+                    <img src="images/Publications.png" alt="" />
+                </li>
+                <li id="media_room">
+                    Media Room
+                    <img src="images/Media_Room.png" alt="" />
+                </li>
+            </ul>
         </article>
     </main>
+    <footer>
+        <div class="main_footer">
+            <div class="about_us">
+                <h3>
+                    About Us
+                </h3>
+                <p>
+                    A 100-acre oasis in south Banglore, the indian Institute of Management Bangalore (IIMB), with its all stone architecture..
+                </p>
+                <a href="">
+                    Readmore...
+                </a>
+            </div>
+            <ul class="other_links">
+                <li><h3>Other Links</h3></li>
+                <li><img src="images/bullet_1.png" alt="" />Publications</li>
+                <li><img src="images/bullet_1.png" alt="" />Media Room</li>
+                <li><img src="images/bullet_1.png" alt="" />Multimedia</li>
+                <li><img src="images/bullet_1.png" alt="" />Related Links</li>
+                <li><img src="images/bullet_1.png" alt="" />Alumni</li>
+                <li><img src="images/bullet_1.png" alt="" />Faculity</li>
+            </ul>
+            <div class="connent_with_us">
+                <h3>Connect with us</h3>
+                <p>
+                    We're on Social Networks. Follow us & get in touch
+                </p>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="contact_us">
+                <h3>Contact Us</h3>
+                <h4>Indian Institute of Management Banglore</h4>
+                <p>Bannerghatta Road, Banglore, India</p>
+                <p>Pin Code: 560076</p>
+                <p>Phone Number: +91-80-26582450/ 26993996</p>
+                <p>E-mail: info@iimb.ernet.in...</p>
+            </div>
+        </div>
+        <div class="sub_footer">
+            <p>
+                Copyright © 2009-2015 Indian Institute of Management Bangalore. All Rights Reserved.
+            </p>
+            <ul>
+                <li>
+                    <a href="">About Us</a>
+                </li>
+                <li>
+                    <a href="">Delivery & Returns</a>
+                </li>
+                <li>
+                    <a href="">Terms & Conditions</a>
+                </li>
+                <li><a href="">Contact Us</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
+
 </html>
